--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+  <img src="https://www.robotlab.com/hubfs/coding.jpg">
+  <img src="https://www.robotlab.com/hubfs/coding.jpg" alt="Coding">
+  <img src="https://www.robotlab.com/hubfs/coding.jpg" alt="Coding" title="Learn to code!">
+
 
 </body>
 </html>
